--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 			<div></div>
 		<!-- 轮播图 -->
 
-		<!-- 相关介绍 -->
+		<!-- 产品介绍 -->
 			<ul>
 				<li>
 					<h2>网易公开课</h2>
@@ -47,7 +47,7 @@
 					<a href="http://www.icourse163.org/">了解更多&gt;</a>
 				</li>
 			</ul>
-		<!-- 相关介绍 -->
+		<!-- 产品介绍 -->
 
 		<!-- 工作环境 -->
 			<ul>
