--- a/web/index.html
+++ b/web/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=8,chrome=1">
 	<title>EDU 网易教育产品</title>
+	<link rel="stylesheet" type="text/css" href="src/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="src/css/base.css">
 </head>
 <body>
 	<!-- 顶部通知栏 -->
-	<div>网易云课堂微专业,帮助你掌握专业技能,令你求职或加薪多一份独特优势!&nbsp;<a href="http://study.163.com/smartSpec/intro.htm#/smartSpecIntro">立即查看&gt;</a><button></button></div>
+	<div class="top-notify">
+	<p><span>网易云课堂微专业,帮助你掌握专业技能,令你求职或加薪多一份独特优势!</span><a href="http://study.163.com/smartSpec/intro.htm#/smartSpecIntro">立即查看&gt;</a><i></i></p>
+	</div>
 	<!-- 顶部通知栏 -->
 
 	<!-- 导航区 -->
-	<div>
-		<p><img src="#"><button>关注</button><span>粉丝 45</span></p>
-		<p>
-			<a href="http://open.163.com/">网易公开课</a>
-			<a href="http://study.163.com/">云课堂</a>
-			<a href="http://www.icourse163.org/">中国大学MOOC</a>
-			<a></a>
-		</p>
+	<div class="nav">
+		<p><i></i><button></button></p><p><span>粉丝 45</span><a href="http://open.163.com/">网易公开课</a><a href="http://study.163.com/">云课堂</a><a href="http://www.icourse163.org/">中国大学MOOC</a></p><a class="search"></a>
 	</div>
 	<!-- 导航区 -->
 
