--- a/web/index.html
+++ b/web/index.html
@@ -23,441 +23,452 @@
 	<!-- 主内容区 -->
 	<main>
 	<!-- 固定的内容 -->
-		<div>
+		<div class="fixed">
 		<!-- 轮播图 -->
-			<div></div>
+			<div class="banner"></div>
 		<!-- 轮播图 -->
 
 		<!-- 产品介绍 -->
-			<ul>
+			<ul class="product">
 				<li>
-					<h2>网易公开课</h2>
-					<p>推出国内外名校公开课,涉及广泛的学科,名校老师认真讲解深度剖析,网易视频公开课频道搭建起强有力的网络视频教学平台。</p>
+					<i class="open-logo"></i>
+					<div>
+					<h3>网易公开课</h3>
+					<p>推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。</p>
 					<a href="http://open.163.com/">了解更多&gt;</a>
+					</div>
 				</li>
 				<li>
+					<i class="study-logo"></i>
+					<div>
 					<h3>云课堂</h3>
-					<p>网易旗下大型在线学习平台,该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验,自由开放的交流互动环境。</p>
+					<p>网易旗下大型在线学习平台，该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验，自由开放的交流互动环境。</p>
 					<a href="http://study.163.com/">了解更多&gt;</a>
+					</div>
 				</li>
 				<li>
+					<i class="mooc-logo"></i>
+					<div>
 					<h3>中国大学MOOC</h3>
-					<p>是爱课程网携手云课堂打造的在线学习平台,每一个有提升愿望的人都可以在这里学习中国最好的大学课程,学完还能获得认证证书。</p>
+					<p>是爱课程网携手云课堂打造的在线学习平台，每一个有提升愿望的人都可以在这里学习中国最好的大学课程，学完还能获得认证证书。</p>
 					<a href="http://www.icourse163.org/">了解更多&gt;</a>
+					</div>
 				</li>
 			</ul>
 		<!-- 产品介绍 -->
 
 		<!-- 工作环境 -->
-			<ul>
-				<li><img src=""></li>
-				<li><img src=""></li>
-				<li><img src=""></li>
-				<li><img src=""></li>
-				<li><img src=""></li>
+			<ul class="work">
+				<li><img src="res/images/work01.jpg"></li>
+				<li><img src="res/images/work02.jpg"></li>
+				<li><img src="res/images/work03.jpg"></li>
+				<li><img src="res/images/work04.jpg"></li>
+				<li><img src="res/images/work05.jpg"></li>
 			</ul>
 		<!-- 工作环境 -->
 		</div>
 		<!-- 固定的内容 -->
 
 		<!-- 变化的内容 -->
-		<div>
-			<div>
-				<!-- tab按钮 -->
-				<div><button>产品设计</button><button>编程语言</button></div>
-				<!-- tab按钮 -->
+		<div class="flow">
+		    <div class="center">
+				<div class="left">
+					<!-- tab按钮 -->
+					<div><button>产品设计</button><button>编程语言</button></div>
+					<!-- tab按钮 -->
 
-				<!-- 课程列表 -->
-				<ul>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-					<li>
-						<img src="#">
-						<h5>手绘画系列教程</h5>
-						<div>
-							<span>音频帮</span>
-							<span>510</span>
-							<span>¥800.00</span>
-						</div>
-						<div>
-							<span>57人在学</span>
-							<span>发布者: 几分钟网</span>
-							<span>分类: 手绘设计</span>
-						</div>
-						<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
-					</li>
-				</ul>
-				<!-- 课程列表 -->
+					<!-- 课程列表 -->
+					<ul>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+						<li>
+							<img src="#">
+							<h5>手绘画系列教程</h5>
+							<div>
+								<span>音频帮</span>
+								<span>510</span>
+								<span>¥800.00</span>
+							</div>
+							<div>
+								<span>57人在学</span>
+								<span>发布者: 几分钟网</span>
+								<span>分类: 手绘设计</span>
+							</div>
+							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+						</li>
+					</ul>
+					<!-- 课程列表 -->
 
-				<!-- 翻页器 -->
-				<div><i>&lt;</i><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i><i>6</i><i>7</i><i>8</i><i>&gt;</i></div>
-				<!-- 翻页器 -->
-			</div>
-			<div>
-			    <!-- 机构介绍 -->
-				<h4>机构介绍</h4>
-				<p>观看下面的视频来了解吧:<video></video></p>
-				<!-- 机构介绍 -->
+					<!-- 翻页器 -->
+					<div><i>&lt;</i><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i><i>6</i><i>7</i><i>8</i><i>&gt;</i></div>
+					<!-- 翻页器 -->
+				</div>
+				<div class="right">
+				    <!-- 机构介绍 -->
+					<h4>机构介绍</h4>
+					<p>观看下面的视频来了解吧:<video></video></p>
+					<!-- 机构介绍 -->
 
-				<!-- 最热排行 -->
-				<h4>最热排行</h4>
-				<ul>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-					<li>
-						<img src="#">
-						<div>
-							<h5>舞曲揭秘</h5>
-						    <span>21657</span>
-						</div>
-					</li>
-				</ul>
-				<!-- 最热排行 -->
-			</div>
+					<!-- 最热排行 -->
+					<h4>最热排行</h4>
+					<ul>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+						<li>
+							<img src="#">
+							<div>
+								<h5>舞曲揭秘</h5>
+							    <span>21657</span>
+							</div>
+						</li>
+					</ul>
+					<!-- 最热排行 -->
+				</div>
+		    </div>	
 		</div>
 		<!-- 变化的内容 -->
 	</main>
