--- a/web/index.html
+++ b/web/index.html
@@ -74,7 +74,7 @@
 		    <div class="center">
 				<div class="left">
 					<!-- tab按钮 -->
-					<div><button>产品设计</button><button>编程语言</button></div>
+					<div class="tab"><button>产品设计</button><button>编程语言</button></div>
 					<!-- tab按钮 -->
 
 					<!-- 课程列表 -->
@@ -82,302 +82,302 @@
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 						<li>
 							<img src="#">
 							<h5>手绘画系列教程</h5>
-							<div>
-								<span>音频帮</span>
-								<span>510</span>
-								<span>¥800.00</span>
+							<div class="normal">
+								<span class="publisher">音频帮</span>
+								<span class="people">510</span>
+								<span class="price">¥800.00</span>
 							</div>
-							<div>
-								<span>57人在学</span>
-								<span>发布者: 几分钟网</span>
-								<span>分类: 手绘设计</span>
+							<div class="hover">
+								<span class="people">57人在学</span>
+								<span class="publisher">发布者: 几分钟网</span>
+								<span class="category">分类: 手绘设计</span>
 							</div>
-							<p>生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
+							<p class="hover describe">生活中不乏有很多美好的画面,何不用画笔记录下来呢?那么就跟几分钟网一起来记录美好画面吧!</p>
 						</li>
 					</ul>
 					<!-- 课程列表 -->
