--- a/web/index.html
+++ b/web/index.html
@@ -426,7 +426,7 @@
 					<!-- 课程列表 -->
 
 					<!-- 翻页器 -->
-					<div class="turn-page"><i>&lt;</i><div class="pageno"><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i><i>6</i><i>7</i><i>8</i></div><i>&gt;</i></div>
+					<div class="turn-page"><i class="backward">&lt;</i><div class="pageno"><i>1</i><i>2</i><i>3</i><i>4</i><i>5</i><i>6</i><i>7</i><i>8</i></div><i class="forward">&gt;</i></div>
 					<!-- 翻页器 -->
 				</div>
 				<div class="right">
@@ -547,6 +547,7 @@
 		</ul>
 	</div>
 	<!-- 页脚 -->
+	<script type="text/javascript" src="src/javascript/html.js"></script>
 	<script type="text/javascript" src="src/javascript/shim.js"></script>
 	<script type="text/javascript" src="src/javascript/hover.js"></script>
 	<script type="text/javascript" src="src/javascript/click.js"></script>
